[Python] Build out of source and support multi-config generator

--- a/binding/python/CMakeLists.txt
+++ b/binding/python/CMakeLists.txt
@@ -15,19 +15,12 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with RBDyn.  If not, see <http://www.gnu.org/licenses/>.
 
-MACRO(GET_RBDYN_PROPERTY PROPERTY)
-  GET_TARGET_PROPERTY(RBDYN_${PROPERTY} RBDyn ${PROPERTY})
-  IF(NOT RBDYN_${PROPERTY})
-    SET(RBDYN_${PROPERTY} "")
-  ENDIF()
-ENDMACRO()
-GET_RBDYN_PROPERTY(COMPILE_FLAGS)
-GET_RBDYN_PROPERTY(INCLUDE_DIRECTORIES)
-GET_RBDYN_PROPERTY(LINK_FLAGS)
-GET_RBDYN_PROPERTY(LINK_LIBRARIES)
-GET_RBDYN_PROPERTY(LOCATION)
-CONFIGURE_FILE(setup.in.py ${CMAKE_CURRENT_SOURCE_DIR}/setup.py)
-GET_FILENAME_COMPONENT(RBDYN_LOCATION_DIRECTORY ${RBDYN_LOCATION} DIRECTORY)
+SET(SETUP_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/")
+CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/setup.in.py" "${CMAKE_CURRENT_BINARY_DIR}/setup.in.py")
+FILE(GENERATE
+      OUTPUT "${SETUP_LOCATION}/setup.py"
+      INPUT "${CMAKE_CURRENT_BINARY_DIR}/setup.in.py")
+#GET_FILENAME_COMPONENT(RBDYN_LOCATION_DIRECTORY ${RBDYN_LOCATION} DIRECTORY)
 
 SET(PYTHON "python")
 SET(PIP "pip")
@@ -38,17 +31,15 @@ ENDIF()
 
 # Build the bindings locally at build time for test purposes
 ADD_CUSTOM_TARGET(rbdyn-python-bindings ALL
-  COMMAND ${PYTHON} setup.py build_ext --inplace
-  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMAND ${CMAKE_COMMAND} -E chdir "${SETUP_LOCATION}" ${PYTHON} setup.py build_ext --inplace
   COMMENT "Generating local RBDyn Python bindings"
-  DEPENDS include/rbdyn_wrapper.hpp rbdyn/c_rbdyn.pxd rbdyn/rbdyn.pxd rbdyn/rbdyn.pyx
+  DEPENDS "include/rbdyn_wrapper.hpp" "rbdyn/c_rbdyn.pxd" "rbdyn/rbdyn.pxd" "rbdyn/rbdyn.pyx"
 )
 
 IF(NOT ${DISABLE_TESTS})
   IF(NOT DEFINED PYTHON_DEB_ROOT)
     ADD_TEST(NAME PythonBindingsTest
-      COMMAND nosetests ${CMAKE_CURRENT_SOURCE_DIR}
-      WORKING_DIRECTORY ${RBDYN_LOCATION_DIRECTORY}
+      COMMAND ${CMAKE_COMMAND} -E chdir "$<TARGET_FILE_DIR:RBDyn>" nosetests ${SETUP_LOCATION}
     )
   ENDIF()
 ENDIF()
@@ -60,14 +51,12 @@ ENDIF()
 # Install the bindings
 IF(DEFINED PYTHON_DEB_ROOT)
   ADD_CUSTOM_TARGET(install-rbdyn-python-bindings
-    COMMAND python setup.py install --root=${PYTHON_DEB_ROOT} --install-layout=deb && python3 setup.py install --root=${PYTHON_DEB_ROOT} --install-layout=deb
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    COMMAND ${CMAKE_COMMAND} -E chdir "${SETUP_LOCATION}" python setup.py install --root=${PYTHON_DEB_ROOT} --install-layout=deb && python3 setup.py install --root=${PYTHON_DEB_ROOT} --install-layout=deb
     COMMENT "Install SpaceVecAlg Python bindings (Debian package)"
   )
 ELSE()
   ADD_CUSTOM_TARGET(install-rbdyn-python-bindings
-    COMMAND ${PIP} install . ${PIP_EXTRA_OPTIONS}
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    COMMAND ${CMAKE_COMMAND} -E chdir "${SETUP_LOCATION}" ${PIP} install . ${PIP_EXTRA_OPTIONS}
     COMMENT "Install RBDyn Python bindings"
   )
 ENDIF()
