--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -33,9 +33,9 @@ macro(addUnitTest name)
     add_executable(${name} ${name}.cpp ${HEADERS})
     if(MSVC)
       # for msvc, we let boost auto-link do the work
-	    target_link_libraries(${name} PUBLIC RBDyn)
+	    target_link_libraries(${name} RBDyn)
     else(MSVC)
-      target_link_libraries(${name} PUBLIC ${Boost_LIBRARIES} RBDyn)
+      target_link_libraries(${name} ${Boost_LIBRARIES} RBDyn)
     endif(MSVC)
     PKG_CONFIG_USE_DEPENDENCY(${name} SpaceVecAlg)
     add_test(${name}Unit ${name})
@@ -47,7 +47,7 @@ endmacro(addUnitTest)
 macro(addBenchmark name)
   add_executable(${name} ${name}.cpp ${HEADERS})
   pkg_config_use_dependency(${name} SpaceVecAlg)
-  target_link_libraries(${name} PUBLIC RBDyn benchmark)
+  target_link_libraries(${name} RBDyn benchmark)
   # Adding a project configuration file (for MSVC only)
   generate_msvc_dot_user_file(${name})
 endmacro(addBenchmark)
