[ci] Correctly setup the env matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,10 +32,10 @@ env:
   - GH_REPO=jrl-umi3218/RBDyn
   - secure: FCe7ktcmBJWgEFsCBnG1QfIhkgNKM3uyRMS9mXiY8hfGQ9KGj/9X4qebUmfZ1ay6Rw2B22FXpRiJk2GmsHxo1RZH3f27b6F1mWz25RgJGX986k2nPChCshf5gORfMI5BKksyXFzp24sXBLcYKGz/xrOioSUY1wPJ3JZ7r7kDEV4=
   matrix:
-    - USE_PYTHON34=false
-    - USE_PYTHON34=true
-    - CMAKE_BUILD_TYPE=RelWithDebInfo
-    - CMAKE_BUILD_TYPE=Debug
+    - USE_PYTHON34=false CMAKE_BUILD_TYPE=RelWithDebInfo
+    - USE_PYTHON34=false CMAKE_BUILD_TYPE=Debug
+    - USE_PYTHON34=true CMAKE_BUILD_TYPE=RelWithDebInfo
+    - USE_PYTHON34=true CMAKE_BUILD_TYPE=Debug
 notifications:
   slack:
     rooms:
