Further fixes for CMake 2.8

--- a/binding/python/CMakeLists.txt
+++ b/binding/python/CMakeLists.txt
@@ -16,6 +16,13 @@
 # along with RBDyn.  If not, see <http://www.gnu.org/licenses/>.
 
 SET(SETUP_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/$<CONFIGURATION>/")
+IF(DEFINED CMAKE_BUILD_TYPE)
+  FILE(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}")
+ELSE()
+  FOREACH(CFG ${CMAKE_CONFIGURATION_TYPES})
+    FILE(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${CFG}")
+  ENDFOREACH()
+ENDIF()
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/setup.in.py" "${CMAKE_CURRENT_BINARY_DIR}/setup.in.py")
 FILE(GENERATE
       OUTPUT "${SETUP_LOCATION}/setup.py"
