--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "cmake"]
 	path = cmake
 	url = https://github.com/gergondet/jrl-cmakemodules
+[submodule ".travis"]
+	path = .travis
+	url = https://github.com/jrl-umi3218/jrl-travis
