[cmake] Various changes to CMake scripts
- Use ADD_CYTHON_BINDINGS
- Set CXX_STANDARD property on RBDyn
- Disable boost autolinking
- Include ${CMAKE_CURRENT_BINARY_DIR}/include in build interface
- Use folders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,11 @@
 
 cmake_minimum_required(VERSION 3.1.3)
 
+set(CMAKE_CXX_STANDARD 11)
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
 include(cmake/base.cmake)
+include(cmake/cython/cython.cmake)
 include(cmake/msvc-specific.cmake)
 
 set(PROJECT_NAME RBDyn)
@@ -18,14 +22,6 @@ set(CXX_DISABLE_WERROR True)
 setup_project()
 set(PROJECT_VERSION 1.1.0)
 
-option(PYTHON_BINDING "Generate python binding." ON)
-if(WIN32)
-  set(PYTHON_BINDING_USER_INSTALL_DEFAULT ON)
-else()
-  set(PYTHON_BINDING_USER_INSTALL_DEFAULT OFF)
-endif()
-option(PYTHON_BINDING_USER_INSTALL "Install the Python bindings in user space" ${PYTHON_BINDING_USER_INSTALL_DEFAULT})
-option(PYTHON_BINDING_FORCE_PYTHON3 "Use pip3/python3 instead of pip/python" OFF)
 option(DISABLE_TESTS "Disable unit tests." OFF)
 option(BENCHMARKS "Generate benchmarks." OFF)
 
