--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "benchmark"]
 	path = tests/benchmark
 	url = https://github.com/google/benchmark
+[submodule "cmake"]
+	path = cmake
+	url = https://github.com/gergondet/jrl-cmakemodules
+[submodule ".travis"]
+	path = .travis
+	url = https://github.com/jrl-umi3218/jrl-travis
