Adding URDF & YAML parsers to RBDyn core repository
The URDF parser comes from mc_rbdyn_urdf and the YAML one from RBDyn PID package (soon to be replaced by a wrapper) https://gite.lirmm.fr/rob-miscellaneous/rbdyn

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ set(PROJECT_DEBUG_POSTFIX "_d")
 set(PROJECT_VERSION 1.1.0)
 set(PROJECT_USE_CMAKE_EXPORT TRUE)
 
+option(BUILD_PARSERS "Build URDF and YAML parsers" ON)
+
 include(cmake/base.cmake)
 include(cmake/cython/cython.cmake)
 include(cmake/msvc-specific.cmake)
