--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,22 +7,22 @@ cmake_minimum_required(VERSION 3.1.3)
 set(CMAKE_CXX_STANDARD 11)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-include(cmake/base.cmake)
-include(cmake/cython/cython.cmake)
-include(cmake/msvc-specific.cmake)
-
 set(PROJECT_NAME RBDyn)
 set(PROJECT_DESCRIPTION "...")
 set(PROJECT_URL "https://github.com/jrl-umi3218/RBDyn")
 set(PROJECT_DEBUG_POSTFIX "_d")
+set(PROJECT_VERSION 1.1.0)
+set(PROJECT_USE_CMAKE_EXPORT TRUE)
+
+include(cmake/base.cmake)
+include(cmake/cython/cython.cmake)
+include(cmake/msvc-specific.cmake)
 
 # Disable -Werror on Unix for now.
 set(CXX_DISABLE_WERROR True)
 
-setup_project()
-set(PROJECT_VERSION 1.1.0)
+project(RBDyn CXX)
 
-option(DISABLE_TESTS "Disable unit tests." OFF)
 option(BENCHMARKS "Generate benchmarks." OFF)
 
 add_project_dependency(SpaceVecAlg REQUIRED)
@@ -35,13 +35,10 @@ endif()
 
 add_subdirectory(src)
 
-if(NOT ${DISABLE_TESTS} OR ${BENCHMARKS})
+if(${BUILD_TESTING} OR ${BENCHMARKS})
   add_subdirectory(tests)
 endif()
 
 if(${PYTHON_BINDING})
   add_subdirectory(binding/python)
 endif()
-
-setup_project_finalize()
-setup_project_package_finalize()
