Add Python bindings for the parsers
Mainly took from mc_rbdyn_urdf with modifications to reflect the
slightly different api and different namespaces

--- a/binding/python/CMakeLists.txt
+++ b/binding/python/CMakeLists.txt
@@ -8,3 +8,12 @@ ADD_CYTHON_BINDINGS(rbdyn
   PRIVATE_SOURCES include/rbdyn_wrapper.hpp rbdyn/rbdyn.pyx rbdyn/c_rbdyn_private.pxd
                   tests/test_rbdyn_pickle.py
 )
+
+if(${BUILD_PARSERS})
+  ADD_CYTHON_BINDINGS(rbdyn_parsers
+    TARGETS RBDynParsers
+    EXPORT_SOURCES rbdyn_parsers/c_rbdyn_parsers.pxd rbdyn_parsers/rbdyn_parsers.pxd rbdyn_parsers/__init__.py
+    PRIVATE_SOURCES include/rbdyn_parsers_wrapper.hpp rbdyn_parsers/rbdyn_parsers.pyx rbdyn_parsers/c_rbdyn_parsers_private.pxd
+                    tests/test_rbdyn_parsers.py
+  )
+endif()
