--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -51,7 +51,9 @@ addUnitTest("IntegrationTest")
 addUnitTest("ExpandTest")
 addUnitTest("CoriolisTest")
 addParserUnitTest("URDFParserTest")
+addParserUnitTest("URDFOutputTest")
 addParserUnitTest("YAMLParserTest")
+addParserUnitTest("YAMLOutputTest")
 
 if(${BENCHMARKS})
   option(BENCHMARK_ENABLE_TESTING "Enable testing of the benchmark library." OFF)
