[actions] Add a conan packaging action

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ project(RBDyn CXX)
 
 option(BENCHMARKS "Generate benchmarks." OFF)
 
-add_project_dependency(SpaceVecAlg REQUIRED)
+add_project_dependency(SpaceVecAlg REQUIRED NO_MODULE)
 
 # For MSVC, set local environment variable to enable finding the built dll
 # of the main library when launching ctest with RUN_TESTS
