--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@
 TMP = $(CURDIR)/debian/tmp
 
 %:
-	dh $@ 
+	dh $@ --parallel
 
 override_dh_auto_configure:
 	dh_auto_configure -- -DPYTHON_DEB_ROOT=$(TMP)
